Update rpc-openstack AIO to plug into ceph
This commit drops in the necessary configurations to plug OpenStack
services into a deployed Ceph cluster.

--- a/rpcd/etc/openstack_deploy/user_variables.yml
+++ b/rpcd/etc/openstack_deploy/user_variables.yml
@@ -34,3 +34,12 @@ ssl_cipher_suite: "ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AE
 # Keystone overrides
 keystone_token_provider: "keystone.token.providers.uuid.Provider"
 keystone_token_driver: "keystone.token.persistence.backends.sql.Token"
+
+ceph_mons: >
+  {% set _var = [] -%}
+  {% if 'mons' in groups -%}
+  {% for mon in groups.mons -%}
+  {% if _var.append(hostvars[mon]['ansible_ssh_host']) -%}{% endif -%}
+  {% endfor -%}
+  {% endif -%}
+  {{ _var }}
