Update ceph monitoring
This commit adds Ansible support for deploying Ceph monitoring and
tweaks the ceph_monitoring plugin.

--- a/rpcd/playbooks/roles/rpc_maas/tasks/main.yml
+++ b/rpcd/playbooks/roles/rpc_maas/tasks/main.yml
@@ -48,3 +48,7 @@
     external_vip_address: "{{ external_lb_vip_address }}"
   when: >
     inventory_hostname == groups['utility'][0] and ssl_check == true
+
+- include: ceph.yml
+  when:
+    inventory_hostname in groups['ceph_all']
