--- a/rpcd/etc/openstack_deploy/user_extras_variables.yml
+++ b/rpcd/etc/openstack_deploy/user_extras_variables.yml
@@ -96,4 +96,6 @@ maas_filesystem_critical_threshold: 90.0
 #   - { package: "*", release: "MariaDB" }
 
 # Ceph
+ceph_stable: true
+ceph_stable_release: hammer
 openstack_config: true
