Fix logging for Ceph
Ensure the /var/log/ceph directory is bind mounted appropriately inside
the ceph containers, and create the /openstack/log/{{ inventory_hostname
}}-ceph directory with a symlink to /var/log/ceph for is_metal: True
ceph hosts.

--- a/rpcd/etc/openstack_deploy/env.d/ceph.yml
+++ b/rpcd/etc/openstack_deploy/env.d/ceph.yml
@@ -30,6 +30,7 @@ container_skel:
       - mons
     properties:
       container_release: trusty
+      service_name: ceph
   ceph_osd_container:
     belongs_to:
       - osds_containers
@@ -38,6 +39,7 @@ container_skel:
     properties:
       is_metal: true
       container_release: trusty
+      service_name: ceph
 
 
 physical_skel:
