Add ELK support for Ceph
Add logstash template file for ceph.
Add a beaver ceph.conf file for ceph containers and hosts.

Due to the permissions on /var/log/ceph.log and /var/log/ceph-audit.log
it isn't possible to capture these at this point, and Ceph offers no
otpions to adjust this, so we will need an alternative solution for
this. This applies to the mons only.

--- a/rpcd/playbooks/beaver.yml
+++ b/rpcd/playbooks/beaver.yml
@@ -89,3 +89,10 @@
       - name: "auth"
         log_file: "/var/log/auth.log"
         tags: "auth,infrastructure"
+      - name: "ceph-mon"
+        log_file: "/var/log/ceph/ceph-mon.{{ inventory_hostname }}.log"
+        multiline_regex_before: '^[a-z_]*\s'
+        tags: "ceph-mon,ceph,infrastructure"
+      - name: "ceph-osd"
+        log_file: "/var/log/ceph/ceph-osd.*.log"
+        tags: "ceph-osd,ceph,infrastructure"
