--- a/rpcd/playbooks/roles/logstash/tasks/logstash_post_install.yml
+++ b/rpcd/playbooks/roles/logstash/tasks/logstash_post_install.yml
@@ -70,6 +70,7 @@
     - 15-beaver.conf
     - 16-elasticsearch.conf
     - 17-rabbitmq.conf
+    - 18-ceph.conf
     - 99-output.conf
   notify: Restart Logstash
   tags:
