Add metrics/alarms for mons and osds
This commit add additional metrics and alarms for OSDs and mons.

The ceph_monitoring.py plugin requires that the monitoring host can
access the ceph cluster. The ceph-common roles configures the necessary
prerequisites. This patch ensures that the roles is applied where
required.

--- a/rpcd/playbooks/roles/rpc_maas/tasks/ceph.yml
+++ b/rpcd/playbooks/roles/rpc_maas/tasks/ceph.yml
@@ -30,12 +30,14 @@
     dest: "/etc/ceph/ceph.client.raxmon.keyring"
   delegate_to: "{{ physical_host }}"
 
-- include: local_setup.yml
+- include: ceph_osd_setup.yml
   vars:
     check_name: ceph_osd_stats
-    check_details: "file=ceph_monitoring.py,args={{ '--type' }},args={{ 'osd' }},args={{ '--host' }},args={{ ansible_hostname }},args={{ '--name' }},args='client.raxmon',args={{ '--keyring' }},args='/etc/ceph/ceph.client.raxmon.keyring',args={{ '--osd_ids' }},args={{ ceph_osd_host['osd_ids'] | join(' ') }}"
+    check_details: "file=ceph_monitoring.py,args={{ '--type' }},args={{ 'osd' }},args={{ '--host' }},args={{ ansible_hostname }},args={{ '--name' }},args='client.raxmon',args={{ '--keyring' }},args='/etc/ceph/ceph.client.raxmon.keyring',args={{ '--osd_ids' }},args={{ ceph_osd_host['osd_ids'] | join(' ') | quote }}"
     check_period: "{{ maas_check_period }}"
     check_timeout: "{{ maas_check_timeout }}"
+    alarms:
+      - { 'name': 'ceph_warn', 'criteria': ':set consecutiveCount={{ maas_alarm_local_consecutive_count }} if (metric["OSD_up"] == 0) { return new AlarmStatus(CRITICAL, "Ceph osd error."); }' }
   when: inventory_hostname in groups['osds']
 
 - include: local_setup.yml
@@ -44,6 +46,9 @@
     check_details: "file=ceph_monitoring.py,args={{ '--type' }},args={{ 'mon' }},args={{ '--host' }},args={{ ansible_hostname }},args={{ '--name' }},args='client.raxmon',args={{ '--keyring' }},args='/etc/ceph/ceph.client.raxmon.keyring'"
     check_period: "{{ maas_check_period }}"
     check_timeout: "{{ maas_check_timeout }}"
+    alarms:
+      - { 'name': 'mon_health_err', 'criteria': ':set consecutiveCount={{ maas_alarm_local_consecutive_count }} if (metric["mon_health"] == 0) { return new AlarmStatus(CRITICAL, "Ceph mon error."); }' }
+      - { 'name': 'mon_health_warn', 'criteria': ':set consecutiveCount={{ maas_alarm_local_consecutive_count }} if (metric["mon_health"] == 1) { return new AlarmStatus(WARNING, "Ceph mon warning."); }' }
   when: inventory_hostname in groups['mons']
 
 - include: local_setup.yml
