Move to submdules

--- a/rpcd/playbooks/ansible.cfg
+++ b/rpcd/playbooks/ansible.cfg
@@ -24,7 +24,7 @@ library = ../../os-ansible-deployment/playbooks/library/
 
 # Set the path to the folder in os-ansible-deployment which holds the roles
 # that are depended on by the rpc-openstack roles
-roles_path = ../../os-ansible-deployment/playbooks/roles/:/etc/ansible/roles/
+roles_path = ../../os-ansible-deployment/playbooks/roles/
 
 # Set the path to the folder in os-ansible-deployment which holds the
 # lookup plugins required
