--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "os-ansible-deployment"]
 	path = os-ansible-deployment
 	url = https://git.openstack.org/stackforge/os-ansible-deployment
+[submodule "rpcd/playbooks/roles/ceph-common"]
+	path = rpcd/playbooks/roles/ceph-common
+	url = https://github.com/ceph/ansible-ceph-common
+[submodule "rpcd/playbooks/roles/ceph-mon"]
+	path = rpcd/playbooks/roles/ceph-mon
+	url = https://github.com/ceph/ansible-ceph-mon
+[submodule "rpcd/playbooks/roles/ceph-osd"]
+	path = rpcd/playbooks/roles/ceph-osd
+	url = https://github.com/ceph/ansible-ceph-osd
