Gather mon facts in ceph-osd.yml playbook

--- a/rpcd/playbooks/ceph-osd.yml
+++ b/rpcd/playbooks/ceph-osd.yml
@@ -13,6 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+- name: Gather mons facts for ceph.conf template
+  hosts: mons
+
 - name: Deploy osds
   hosts: osds
   user: root
