--- a/rpcd/etc/openstack_deploy/user_extras_variables.yml
+++ b/rpcd/etc/openstack_deploy/user_extras_variables.yml
@@ -97,6 +97,7 @@ maas_filesystem_critical_threshold: 90.0
 
 # Ceph
 fsid: '{{ fsid_uuid }}'
+fetch_directory: /etc/openstack_deploy/ceph_fetch
 ceph_stable: true
 ceph_stable_release: hammer
 openstack_config: true
