--- a/rpcd/etc/openstack_deploy/user_extras_variables.yml
+++ b/rpcd/etc/openstack_deploy/user_extras_variables.yml
@@ -103,7 +103,7 @@ fetch_directory: /etc/openstack_deploy/ceph_fetch
 # Use stable version of ceph
 ceph_stable: true
 # Specify ceph release name
-ceph_stable_release: hammer
+ceph_stable_release: firefly
 # Enable OpenStack support inside the ceph-ansible playbooks
 openstack_config: true
 # Use raw journal devices
