[WIP] maas module

--- a/rpcd/playbooks/roles/rpc_maas/tasks/agent_install_remote.yml
+++ b/rpcd/playbooks/roles/rpc_maas/tasks/agent_install_remote.yml
@@ -13,82 +13,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: Verify raxmon-entities-list and MaaS API authentication does not fail
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-entities-list
-  register: raxmon_output
-  failed_when: raxmon_output.rc != 0
-
-- name: Entity {{ entity_name }} count
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-entities-list | grep ' label={{ entity_name }} provider=Rackspace Monitoring ...>$' | wc -l
-  register: entity_count
-
-- name: Zero entities with label {{ entity_name }} exist
-  fail:
-    msg: "Zero entities with the label {{ entity_name }} exist. Entities should be created as part of the hardware provisioning process, if missing, please consult the internal documentation for associating one with the device."
-  when: entity_count.stdout|int == 0
-
-- name: At most one {{ entity_name }} entity exists
-  fail:
-    msg: "Entity count of {{ entity_count.stdout }} != 1 for entity with the label {{ entity_name }}. Reduce the entity count to one by deleting or re-labelling the duplicate entities."
-  when: entity_count.stdout|int != 1
-
-- name: Get entity {{ entity_name }}
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-entities-list | grep ' label={{ entity_name }} provider=Rackspace Monitoring ...>$' | awk '{print $2}' | cut -d= -f2
-  register: entity
-
 - name: Assign agent ID to entity
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-entities-update --id {{ entity.stdout }} --agent-id {{ entity_name }}
-
-- name: Agent token {{ entity_name }} count
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-agent-tokens-list | grep ' label={{ entity_name }}, ' | wc -l
-  register: agent_token_count
-  when: maas_agent_token is not defined
-
-- name: At most one {{ entity_name }} agent token should exist
-  fail:
-    msg: "Agent token count of {{ agent_token_count.stdout }} > 1 for entity with the label {{ entity_name }}"
-  when: maas_agent_token is not defined and agent_token_count.stdout|int > 1
+  raxmon:
+    cmd: assign_agent_to_entity
+    entity: "{{ entity_name }}"
+    venv_bin: "{{ maas_venv_bin }}"
 
 - name: Create agent token
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-agent-tokens-create --label={{ entity_name }}
+  raxmon:
+    cmd: create_agent_token
+    entity: "{{ entity_name }}"
+    venv_bin: "{{ maas_venv_bin }}"
   register: agent_token
-  when: maas_agent_token is not defined and agent_token_count.stdout|int == 0
-
-- name: Get agent token
-  shell: |
-    {% if maas_venv_enabled | bool %}
-    . {{ maas_venv_bin }}/activate
-    {% endif %}
-    raxmon-agent-tokens-list | grep '<AgentToken: id=.* label={{ entity_name }}, .*>' | awk '{print $2}' | sed -e 's/id=\(.*\),/\1/g'
-  register: maas_agent_token_id
   when: maas_agent_token is not defined
 
 - name: Set agent token fact
-  set_fact: maas_agent_token={{ maas_agent_token_id.stdout }}
+  set_fact: maas_agent_token={{ agent_token.id }}
   when: maas_agent_token is not defined
 
 - name: Generate raxmon agent config
@@ -98,7 +38,6 @@
     mode: 0600
     owner: root
     group: root
-
 
 - name: Start raxmon agent
   service:
