--- a/rpcd/playbooks/roles/rpc_post_upgrade/tasks/post-upgrade-utility.yml
+++ b/rpcd/playbooks/roles/rpc_post_upgrade/tasks/post-upgrade-utility.yml
@@ -70,3 +70,57 @@
     msg: "One or more of the cinder services are in the down state. Check the output above for more detail."
   when: "'down' in '{{ item.split(' ')[-1] }}'"
   with_items: "{{ cinder_output.stdout_lines | default([]) }}"
+
+- name: Obtain a list of neutron routers
+  shell: |
+    . {{ ansible_env.HOME }}/openrc
+    neutron router-list -f value --column id
+  register: neutron_routers
+
+- name: Check agent assigned to each neutron router
+  shell: |
+    . {{ ansible_env.HOME }}/openrc
+    neutron l3-agent-list-hosting-router -f value --column host {{ item }}
+  with_items: "{{ neutron_routers.stdout_lines }}"
+  register: neutron_routers_agents
+
+- name: Write file containing agent for each router
+  copy:
+    content: "{{ item.stdout }}"
+    dest: "/tmp/{{ item.item }}.post-upgrade"
+  with_items: "{{ neutron_routers_agents.results }}"
+  when: item.stdout != ""
+  delegate_to: localhost
+
+- name: Get md5 of pre-upgrade files
+  stat:
+    path: "/tmp/{{ item }}.pre-upgrade"
+  register: pre
+  with_items: "{{ neutron_routers.stdout_lines }}"
+  delegate_to: localhost
+
+- name: Get md5 of post-upgrade files
+  stat:
+    path: "/tmp/{{ item }}.post-upgrade"
+  register: post
+  with_items: "{{ neutron_routers.stdout_lines }}"
+  delegate_to: localhost
+
+- name: Print warning if neutron router has moved
+  debug:
+    msg: "*WARNING* Neutron router with ID {{ item.0.item }} appears to have moved agents during the upgrade. Please investigate."
+  when:
+    - item.0.stat.exists # skip check if router didn't exist when pre-upgrade check was run
+    - item.0.stat.md5 != item.1.stat.md5
+  with_together:
+    - "{{ pre.results }}"
+    - "{{ post.results }}"
+
+- name: Cleanup pre and post-upgrade router agent files
+  file:
+    path: "/tmp/{{ item.0 }}.{{ item.1 }}"
+    state: absent
+  with_nested:
+    - neutron_routers.stdout_lines
+    - [ 'pre-upgrade', 'post-upgrade' ]
+  delegate_to: localhost
